# jm-python-config

./: .markdownlint.json  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  README.md  cspell.config.yaml  mkdocs.yml  pnpm-workspace.yaml  project-structure.txt  pyproject.toml  ruff.toml
src/config/: logging_bootstrap.py  settings_manager.py
src/jm_python_config/: __init__.py  appcontext.py  logging_manager.py  translation_manager.py
tests/unit/: conftest.py
tests/unit/config/: test_appcontext.py  test_logging_bootstrap.py  test_logging_manager.py  test_settings_manager.py  test_translation_manager.py
